@startuml

title __APPLICATION's Class Diagram__\n

  package application {
    class FaceBio {
        - id : long
        - code : int
        - firstName : String
        - lastName : String
        - age : long
        + FaceBio()
        + getId()
        + getCode()
        + getFirstName()
        + getLastName()
        + getAge()
        + FaceBio()
    }
  }
  

  package application {
    class FaceBioDto {
        - id : long
        - code : int
        - firstName : String
        - lastName : String
        - age : long
        + FaceBioDto()
        + getId()
        + getCode()
        + getFirstName()
        + getLastName()
        + getAge()
        + FaceBioDto()
    }
  }
  

  package application {
    class FaceBioMapper {
        + mapToFaceBio()
        + mapToFaceBioDto()
        + mapToStringList()
    }
  }
  

  package application {
    class FaceBioPhoto {
        - id : long
        - name : String
        - image : Blob
        + FaceBioPhoto()
        + getId()
        + getName()
        + getImage()
        + FaceBioPhoto()
        + setId()
        + setName()
        + setImage()
    }
  }
  

  package application {
    class FaceBioPhotoDto {
        - id : long
        - name : String
        - image : String
        + FaceBioPhotoDto()
        + getId()
        + getName()
        + getImage()
        + FaceBioPhotoDto()
        + setId()
        + setName()
        + setImage()
    }
  }
  

  package application {
    class FaceBioPhotoMapper {
        - mapStringToBlob()
        - mapBlobToString()
        - handleException()
        + mapToFaceBioPhotoDtoList()
        + mapToFaceBioPhoto()
        + getPhotoNamesAsStringList()
    }
  }
  

  package application {
    interface FaceBioPhotoRepository {
        {abstract} + findByName()
        {abstract} + save()
        {abstract} + findAll()
        {abstract} + count()
    }
  }
  

  package application {
    class FaceBioPhotoService {
        + getFaceBioPhoto()
        - handleException()
        + savePhoto()
        + getAllFaceBioPhotos()
        + getCount()
    }
  }
  

  package application {
    interface FaceBioRepository {
        {abstract} + findByCode()
        {abstract} + save()
    }
  }
  

  package application {
    class FaceBioService {
        + getFaceBioByCode()
        + saveFaceBio()
    }
  }
  

  package application {
    class IdentificationApplication {
        {static} + main()
    }
  }
  

  package application {
    class MainController {
        + getFaceBioElements()
        + getPhotos()
        + getSize()
        + getNames()
        + savePhoto()
        + setNamesList()
        + saveFaceBio()
    }
  }
  

  package application {
    class NamesWrapper {
        - namesList : List<String>
        + NamesWrapper()
        + getNamesList()
        + setNamesList()
    }
  }
  

  FaceBioPhotoService o-- FaceBioPhotoRepository : faceBioPhotoRepository
  FaceBioService o-- FaceBioRepository : faceBioRepository
  MainController o-- FaceBioService : faceBioService
  MainController o-- FaceBioMapper : faceBioMapper
  MainController o-- FaceBioPhotoMapper : faceBioPhotoMapper
  MainController o-- FaceBioPhotoService : faceBioPhotoService
  MainController o-- NamesWrapper : namesWrapper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
